--- a/src/style.css
+++ b/src/style.css
@@ -112,5 +112,14 @@ button:focus-visible {
   padding: 10px;
   width: 100px;
   border-radius: 5px;
-  
+
+}
+
+.coordinate {
+  background-color: brown;
+  width: 130px;
+  height: 100px;
+  color: aliceblue;
+  font-size: 1.1em;
+  padding: 10px;
 }
