--- a/src/style.css
+++ b/src/style.css
@@ -1,125 +1,96 @@
 body {
   margin: 0;
-  /* display: flex; */
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  /* min-width: 320px; */
   min-height: 100vh;
-  /* background-color: gray; */
+  background-attachment:fixed;
+  background-image: 
+  url('https://sn-gazeta.ru/wp-content/uploads/2023/04/1672721610_pro-dachnikov-com-p-noutbuk-v-interere-foto-14.jpg') ;
+  /* url('https://s1.1zoom.ru/big0/430/Laptops_Smartphone_Notebooks_Table_568319_1280x853.jpg'); */
+  /* url('https://static.giga.de/wp-content/gallery/hp-spectre-13-2016/hp-spectre-13-01.jpg'); */
+  background-size:cover;
 }
 
-/* 
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.container {
+  display:block;
+  position:sticky;
+  width: 100%;
+  height: 100%;
+}
+header {
+  background-color: rgb(26, 19, 53) ;
+  padding: 15px;
+  color: rgb(150, 138, 197);
+  position: fixed;
+  z-index: 1;
+  width: 100%;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-} */
-
-
-/* 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.wrapper_header {
+  opacity: 0.6;
+  background-color: grey;
+  height: 100vh;
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
-
-
-
-
-
-
-.btn {
-  background-color: blue;
-  margin: 10px;
+.wrapper_header_name{
+  margin-top: 300px;
   color: aliceblue;
-  padding: 10px;
-  width: 100px;
-  border-radius: 5px;
-
+  font-size: 5em;
+  font-weight:700;
 }
 
-.coordinate {
-  background-color: brown;
-  width: 130px;
-  height: 100px;
-  color: aliceblue;
-  font-size: 1.1em;
-  padding: 10px;
+.main_menu {
+  background-color: grey;
+  height: 100vh;
+  
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ /* .container2::before {
+  content: 'hgfuyguy';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(transparent, transparent, transparent,#80ffdb);
+
+ }
+ .container::after {
+  content: 'oijpokpo';
+  position: absolute;
+  width: 500px;
+  height: 500px;
+  background-image: conic-gradient(transparent, transparent, transparent,#e485e4);
+
+ }
+ @keyframes rotate {
+  
+ } */
