--- a/src/style.css
+++ b/src/style.css
@@ -2,9 +2,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
-  /* min-width: 320px; */
   min-height: 100vh;
   background-attachment:fixed;
   background-image: 
@@ -12,11 +10,9 @@ body {
   /* url('https://s1.1zoom.ru/big0/430/Laptops_Smartphone_Notebooks_Table_568319_1280x853.jpg'); */
   /* url('https://static.giga.de/wp-content/gallery/hp-spectre-13-2016/hp-spectre-13-01.jpg'); */
   background-size:cover;
-  /* scroll-behavior: smooth; */
 }
 
 .container {
-  display:block;
   position:sticky;
   width: 100%;
   height: 100%;
@@ -30,12 +26,14 @@ header {
   z-index: 2;
   width: 100%;
 }
+.navbar_first {
+  flex: 10;
+  padding: 10px 50px;
+}
 .navbar {
   margin: 0px;
-  padding: 10px 26px;
-}
-.navbar_first {
-  padding: 10px 780px  10px 25px;
+  padding: 10px;
+  flex: 1;
 }
 .navbar:hover {
   color:lightgrey;
@@ -81,13 +79,6 @@ margin-left: -20px;
 
 }
 
-.about {
-  background-color: gray;
-  height: 100vh;
-  padding-top: 300px;
-  
-}
-
 img {
   width: 25%;
   border-radius: 50%;
@@ -104,11 +95,46 @@ img {
   filter: grayscale(0.4);
 }
 
-
-.content {
-  border:  1px solid red;
+.about {
+  background:
+  url('http://top-fon.com/uploads/posts/2022-09/1663550091_30-top-fon-com-p-sine-serii-fon-odnotonnii-foto-33.jpg');
+  height: 68vh;
+  padding-top: 200px;
+  /* margin-bottom: -200px; */
 }
 
+.content_title {
+  color: aqua;
+  font-size: 3em;
+  margin: 10px 50px;
+}
+.content {
+  color: white;
+  padding: 20px;
+  font-size: 1.2em;
+  line-height: 1.5em;
+  text-indent:1.2em;
+  /* border:  1px solid red; */
+}
+
+.content_title2 {
+  color: aqua;
+  margin: 10px 50px;
+  font-size: 2em;
+  padding: 10px;
+}
+
+.content_end {
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  color: white;
+}
+
+.content_end >div {
+  padding: 5px 20px;
+  font-size: 1.2em;
+}
 
 .skills {
   height: 100vh;
