--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+
+
+
+
+
+
+
 body {
   margin: 0;
   padding: 0;
@@ -40,6 +50,10 @@ header {
   transition: 1s;
 }
 
+a {
+  scroll-behavior: smooth;
+  color: red;
+}
 
 .wrapper_header {
   opacity: 0.6;
@@ -96,6 +110,7 @@ margin-left: -20px;
 }
 
 .about {
+ 
   /* background:
   url('http://top-fon.com/uploads/posts/2022-09/1663550091_30-top-fon-com-p-sine-serii-fon-odnotonnii-foto-33.jpg'); */
   background: linear-gradient(to bottom right,black, lightblue);
