--- a/src/style.css
+++ b/src/style.css
@@ -122,7 +122,7 @@ margin-left: -20px;
 }
 
 .content_title {
-  color: aqua;
+  color: rgb(26, 19, 53);
   font-size: 2.5em;
   margin: 0px 50px;
 }
@@ -136,11 +136,12 @@ margin-left: -20px;
 }
 
 .content_title2 {
-  color: aqua;
+  color: rgb(26, 19, 53);
   margin: 0px 50px;
   font-size: 2em;
   padding: 10px;
 }
+
 
 .content_end {
   display: flex;
@@ -177,9 +178,94 @@ color: aqua;
 
 .skills {
   height: 100vh;
-  background-color: aliceblue;
-  opacity: 0.3;
+  background-image: 
+url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fon-dlya-prezentatsii-programmirovanie-76.jpg);
+
+  background-size:cover;
+  background-attachment: fixed;
+  /* background-color:black; */
+  height: 100vh;
+  filter: grayscale(50%)
 }
+
+.battery {
+  padding: 100px;
+}
+
+.inside {
+  background-color: red;
+  margin:10px 2px ;
+  width: 10px;
+  height: 50px;
+  border-radius: 3px;
+}
+.inside_flex {
+  display: flex;
+}
+.battery {
+  background: linear-gradient(to top right,black, lightblue);
+  /* position: relative; */
+  border: red 2px solid;
+  width: 250px;
+  padding: 15px 0px;
+  border-radius: 5px;
+  /* margin: 5px; */
+}
+
+.battery::before {
+  content: '';
+  background-color: lightgray;
+  margin: 5px;
+  padding: 12px 5px;
+  border-radius: 2px;
+  /* position: absolute; */
+  /* background-repeat:repeat-x; */
+  /* overflow-x: ; */
+}
+
+.battery::after {
+  content: '';
+  background-color: rgb(134, 164, 174);
+  padding: 4px;
+  margin-left: 92%;
+  border: red 2px solid;
+  border-left: none;
+  border-radius: 0px 5px 5px 0px;
+}
+
+
+.skills_title {
+  color: white;
+  margin: 0;
+  text-align: center;
+  font-size: 2.5em;
+  padding-top: 100px;
+}
+
+.content_skills {
+  color: white;
+  display: flex;
+  justify-content:space-around;
+}
+
+.battery_position {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  font-size: 1.4em;
+  /* font-weight:500; */
+  gap: 30px;
+}
+
+.battery_position{
+padding-top: 20px;
+}
+
+
+
+
+
 .projects {
   height: 100vh;
   background-color: gray;
