--- a/src/style.css
+++ b/src/style.css
@@ -180,6 +180,7 @@ color: aqua;
   height: 100vh;
   background-image: 
 url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fon-dlya-prezentatsii-programmirovanie-76.jpg);
+/* url(https://www.youtube.com/watch?v=Qm-5u8e4Ct0); */
 
   background-size:cover;
   background-attachment: fixed;
@@ -188,8 +189,8 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   filter: grayscale(50%)
 }
 
-.battery {
-  padding: 100px;
+.inside_flex {
+  display: flex;
 }
 
 .inside {
@@ -199,9 +200,9 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   height: 50px;
   border-radius: 3px;
 }
-.inside_flex {
-  display: flex;
-}
+
+
+
 .battery {
   background: linear-gradient(to top right,black, lightblue);
   /* position: relative; */
@@ -256,11 +257,10 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   font-size: 1.4em;
   /* font-weight:500; */
   gap: 30px;
+  padding-top: 20px;
 }
 
-.battery_position{
-padding-top: 20px;
-}
+
 
 
 
@@ -271,16 +271,40 @@ padding-top: 20px;
   background-color: gray;
 }
  
+
+
+
+
 .contacts {
   height: 100vh;
-  background-color: aliceblue;
+  width:100%;
+  overflow: hidden;
+  display: flex;
+  filter: grayscale(0.8);
+  /* text-align: center; */
+  color: white;
+  font-size:  3em;
+  justify-content: center;
+  position: relative;
+  background-color: aqua;
 }
 
 
+.contacts video {
+height: 100vh;
+width: 100%;
+position: absolute;
+top: 0px;
+left: 0px;
+object-fit: cover;
+z-index: 1;
+}
 
 
-
-
+.contacts_content {
+  margin-top: 50px;
+  z-index: 2;
+}
 
 
 
