--- a/src/style.css
+++ b/src/style.css
@@ -112,9 +112,6 @@ margin-left: -20px;
 }
 
 .about {
- 
-  /* background:
-  url('http://top-fon.com/uploads/posts/2022-09/1663550091_30-top-fon-com-p-sine-serii-fon-odnotonnii-foto-33.jpg'); */
   background: linear-gradient(to bottom right,black, lightblue);
   height: 60vh;
   padding-top: 300px;
@@ -239,7 +236,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   color: white;
   margin: 0;
   text-align: center;
-  font-size: 2.5em;
+  font-size: 2em;
   padding-top: 100px;
 }
 
@@ -259,22 +256,8 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   gap: 30px;
   padding-top: 20px;
 }
-
-
-
-
-
-
-
-.projects {
-  height: 100vh;
-  background-color: gray;
-}
  
-
-
-
-
+ 
 .contacts {
   height: 100vh;
   width:100%;
@@ -355,6 +338,7 @@ z-index: 1;
 
 .button_send {
   margin-top: 25px;
+  margin-left: auto;
   border-radius: 5px;
   background-color: lightgrey;
   opacity: 0.6;
@@ -362,33 +346,51 @@ z-index: 1;
 }
 
 
+.projects {
+  height: 100vh;
+  background: linear-gradient(to bottom right,black, lightblue);
+}
+ 
+.projects>h1 {
+  color:aliceblue;
+  text-align: center;
+  margin: 0;
+  padding: 100px;
+  font-size: 2em;
+}
 
-
-
-
-
-
-
-
-
-
-
- /* .container2::before {
-  content: 'hgfuyguy';
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  background-image: conic-gradient(transparent, transparent, transparent,#80ffdb);
-
+.projects_content {
+  display: flex;
+  border: 2px solid red;
  }
- .container::after {
-  content: 'oijpokpo';
-  position: absolute;
-  width: 500px;
-  height: 500px;
-  background-image: conic-gradient(transparent, transparent, transparent,#e485e4);
+ 
+ .projects_box {
+  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  /* border: 2px solid red; */
+  width: 100px;
+  color: azure;
+  font-size: 1.2em;
+}
 
- }
- @keyframes rotate {
-  
- } */
+.projects_box:hover {
+  color: rgb(109, 109, 187);
+  transition: 0.5s;
+}
+
+.ball>img {
+  /* border: 2px solid red; */
+  border-radius: 50%;
+  width: 80px;
+}
+.ball>img:hover {
+  rotate: 360deg;
+  transition: 1s;
+}
+
+.bootstrap>img {
+  width: 80px;
+}
+
