--- a/src/style.css
+++ b/src/style.css
@@ -234,8 +234,11 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   margin-top: 3px;
   position: absolute;
   width: 250px;
-  animation: text-anim 5.5s ease-in-out forwards;
   min-height: 61px !important;
+  opacity: 0;
+}
+.anim {
+  animation: text-anim 5.5s ease-in-out forwards;
 }
 
 @keyframes text-anim {
@@ -245,6 +248,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
     /* width: 0; */
   }
   to {
+    opacity: 1;
     /* min-height: 61px !important; */
   }
 }
