--- a/src/style.css
+++ b/src/style.css
@@ -253,19 +253,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   }
 }
 
-/* 
-.battery::before {
-  content: '';
-  background-color: blue;
-  margin-left: 254px;
-  padding: 18px 1px;
-  padding-bottom: 10px;
-  position: absolute;
-  background-repeat:repeat-x;
-   
-  background-repeat:space;
-}  */
-
+ 
  
 .battery::after {
   content: '';
@@ -298,6 +286,23 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
 }
  
  
+ #airplane {
+  animation: airplane 10s linear   infinite ;
+ }
+
+ @keyframes airplane {
+  from {
+    rotate: 0deg;
+  }
+  to {
+    rotate: 360deg;
+  }
+  
+ }
+
+
+
+
 .contacts {
   height: 100vh;
   width:100%;
