--- a/src/style.css
+++ b/src/style.css
@@ -225,6 +225,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
 }
 
 .battery {
+  box-shadow: 0px 0px 20px aqua;
   position: relative;
   /* background: linear-gradient(to top right,black, lightblue); */
   /* background:url("Background_battery.png"); */
@@ -261,9 +262,10 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   }
 }
 
- 
- 
+
+
 .battery::after {
+  /* box-shadow: 0px 0px 20px aqua; */
   content: '';
   /* background-color: rgb(134, 164, 174); */
   padding: 3px;
@@ -456,8 +458,8 @@ z-index: 1;
 }
 
 .projects_box:hover {
-  color: rgb(109, 109, 187);
-  transition: 0.5s;
+  color: aqua;
+  transition: 1s;
   
 }
 
