--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,24 @@ body {
   background-size:cover;
 }
 
+
+.eye {
+
+  animation: anim3 5.5s ease-in-out forwards;
+}
+@keyframes anim3 {
+  from {
+    margin-top: 0px;
+  }
+  to {
+    margin-top: 50px;
+  }
+}
+
+
+
+
+
 .container {
   position:sticky;
   width: 100%;
