--- a/src/style.css
+++ b/src/style.css
@@ -22,20 +22,7 @@ body {
   background-size:cover;
 }
 
-
-#eye {
-
-  animation: anim3 5.5s ease-in-out infinite;
-}
-@keyframes anim3 {
-  from {
-    margin-top: 0px;
-  }
-  to {
-    margin-top: 50px;
-  }
-}
-
+ 
 
 
 
@@ -317,7 +304,13 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
 .content_skills {
   color: white;
   display: flex;
-  justify-content:space-around;
+  justify-content: space-evenly;
+  /* padding: 50px; */
+  /* text-align: center; */
+  margin-top: 20px;
+}
+.content_skills>h1 {
+text-align: center;
 }
 
 #planet {
@@ -407,6 +400,7 @@ z-index: 1;
   flex: 3;
   display: flex;
   flex-direction: column;
+  /* color: white; */
 }
 
 .content_right>div {
@@ -428,7 +422,8 @@ z-index: 1;
   margin-top: 25px;
   margin-left: auto;
   border-radius: 5px;
-  background-color: lightgrey;
+  background-color: white ;
+  /* color:aliceblue; */
   opacity: 0.6;
   width: 120px;
   box-shadow: 0px 0px 10px aqua;
@@ -440,6 +435,7 @@ z-index: 1;
   background: linear-gradient(to bottom right,black, lightblue);
   color: rgb(150, 138, 197);
   text-shadow: 0px 0px 5px rgb(175, 219, 219);
+  
 }
 
 .projects>h1 {
@@ -452,28 +448,41 @@ z-index: 1;
 
 .projects_content {
   display: flex;
-  /* border: 2px solid red; */
+   margin-top: -50px;
+  flex-direction: column;
 }
-
+.projects_content>div {
+  display: flex;
+  justify-content: space-evenly;
+  /* border: 2px solid red; */
+  margin-top: 50px;
+  
+}
 .projects_box {
-  margin-left: 50px;
+ 
   display: flex;
   flex-direction: column;
   text-align: center;
   width: 100px;
   color: azure;
   font-size: 1.2em;
+  align-items: center
     /* border: 2px solid red; */
   
 }
 
+.projects_box {
+  /* justify-content: space-around; */
+  gap: 10px;
+}
+  
 .project_design {
-  height: 100px;
-  width: 100px;
+  height: 140px;
+  width: 140px;
   background-image:url(adaptiv.png)  ;
   /* background-position: 10% 10%; */
-  background-size: 102px 80px;
-  background-repeat:no-repeat;
+  background-size: 142px 120px;
+  background-repeat:no-repeat; 
 }
 
 .projects_box:hover {
@@ -484,7 +493,7 @@ z-index: 1;
 
 .project_ball>img {
   border-radius: 50%;
-  width: 80px;
+  width: 120px;
 }
 .project_ball>img:hover {
   /* box-shadow: 5px 5px 5px lightblue; */
@@ -493,11 +502,11 @@ z-index: 1;
 }
 
 .project_bootstrap>img {
-  width: 80px;
+  width: 120px;
 }
 
 .project_design>img {
-  width: 100px;
+  width: 120px;
  
 }
 
