--- a/src/style.css
+++ b/src/style.css
@@ -392,6 +392,7 @@ z-index: 1;
 .content_left {
   flex: 2;
   margin-top: 50px;
+  color: aliceblue;
 }
 .content_left>div {
   padding: 20px;
@@ -522,4 +523,18 @@ z-index: 1;
   height: 100px;
   margin-top: -100px;
   z-index: 2;
+}
+
+
+@media screen and (max-width: 600px) {
+   header {
+   display: none; 
+  }
+  /* header2 {
+    display: flex;
+  }
+.gallery {
+ display: flex;
+ flex-direction: column;
+}  */
 }
