--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  display: flex;
+  /* display: flex; */
   align-items: center;
   min-height: 100vh;
   background-attachment:fixed;
@@ -20,6 +20,7 @@ body {
   /* url('https://s1.1zoom.ru/big0/430/Laptops_Smartphone_Notebooks_Table_568319_1280x853.jpg'); */
   /* url('https://static.giga.de/wp-content/gallery/hp-spectre-13-2016/hp-spectre-13-01.jpg'); */
   background-size:cover;
+  /* width: auto; */
 }
 
  
@@ -28,9 +29,10 @@ body {
 
 
 .container {
-  position:sticky;
+  /* position:sticky; */
   width: 100%;
   height: 100%;
+  min-width: 600px;
 }
 header {
   display: flex;
@@ -525,24 +527,38 @@ z-index: 1;
   z-index: 2;
 }
 
+/* #home {
+  width: 100%;
+} */
 
 @media screen and (max-width: 850px) {
   #home {
-    font-size: .3 em; 
-
+    font-size: 0.5 em; 
+    width: 100%;
   }
   header {
    /* display: none;  */
   }
 
-
-
-
-  /* header2 {
+  .content_skills {
+    color: white;
     display: flex;
+    flex-direction: column;
   }
-.gallery {
- display: flex;
- flex-direction: column;
-}  */
+  .skills {
+   height: 100%;
+ }
+ #projects {
+  height: 100%;
+ }
+ .projects_content>div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  /* border: 2px solid red; */
+  margin-top: 50px;
+}
+
+
+
 }
