--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,6 @@ body {
   /* width: auto; */
 }
 
- 
 
 
 
@@ -32,7 +31,7 @@ body {
   /* position:sticky; */
   width: 100%;
   height: 100%;
-  min-width: 600px;
+  min-width: 500px;
 }
 header {
   display: flex;
@@ -115,6 +114,7 @@ margin-left: -20px;
 
 .portPhoto {
   width: 100%;
+  min-width: 120px;
   margin-top:-120px;
   text-align: center;
   z-index: 1;
@@ -527,29 +527,48 @@ z-index: 1;
   z-index: 2;
 }
 
-/* #home {
-  width: 100%;
-} */
 
-@media screen and (max-width: 850px) {
+
+
+  
+@media screen and (max-width: 1200px) {
+ 
+  }
+  /* #home
+  #about
+  #skills
+  #projects
+  #contacts */
+
+@media screen and (max-width: 1000px) {
   #home {
     font-size: 0.5 em; 
     width: 100%;
+    height: 100vh;
+    
   }
   header {
-   /* display: none;  */
+    /* display: none;  */
   }
 
+
+  #about {
+    height: 100vh;
+  }
+
+  
+  #skills {
+    height: 100vh;
+  }
   .content_skills {
     color: white;
     display: flex;
     flex-direction: column;
   }
-  .skills {
-   height: 100%;
- }
+  
+
  #projects {
-  height: 100%;
+  height: 100vh;
  }
  .projects_content>div {
   display: flex;
@@ -560,5 +579,23 @@ z-index: 1;
 }
 
 
-
+#contacts {
+  height: 100vh;
 }
+
+  }
+
+
+
+@media screen and (max-width: 768px) {
+ 
+  }
+
+  
+@media screen and (max-width: 460px) {
+   
+  }
+
+
+
+ 
