--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@ header {
 }
 .navbar_first {
   flex: 10;
-  padding: 10px 50px;
+  padding: 10px 3%;
   color: rgb(150, 138, 197);
   text-shadow: 0px 0px 10px white;
 }
@@ -594,13 +594,19 @@ z-index: 1;
     border: 3px solid #d40f0f;
     width: 100%;
     font-size: 0.6em;
-    padding-bottom: 10%;
+    padding-bottom: 20%;
   }
   }
 
   
 @media screen and (max-width: 460px) {
-   
+  #home {
+    border: 3px solid #d40f0f;
+    width: 100%;
+    font-size: 0.6em;
+    /* padding-bottom: 20%; */
+  } 
+
   }
 
 
