--- a/src/style.css
+++ b/src/style.css
@@ -591,10 +591,11 @@ z-index: 1;
 
 @media screen and (max-width: 768px) {
   #home {
-    border: 3px solid #d40f0f;
+    border: 3px solid gold;
     width: 100%;
     font-size: 0.6em;
-    padding-bottom: 20%;
+    padding-bottom: 30%;
+    margin-bottom: 30%;
   }
   }
 
