--- a/src/style.css
+++ b/src/style.css
@@ -553,7 +553,7 @@ z-index: 1;
 
 
   #about {
-    min-height: 100vh;
+    min-height: 1200px;
   }
 
 
@@ -591,11 +591,10 @@ z-index: 1;
 
 @media screen and (max-width: 768px) {
   #home {
-    border: 3px solid gold;
     width: 100%;
     font-size: 0.6em;
     padding-bottom: 30%;
-    margin-bottom: 30%;
+    /* margin-bottom: 30%; */
   }
   }
 
