--- a/src/style.css
+++ b/src/style.css
@@ -107,13 +107,15 @@ margin-left: -20px;
 }
 
 .myPhoto{
-  margin: 0 auto;
+
   width: 25%;
   border-radius: 50%;
   border: 15px solid rgb(231, 228, 228);
 }
 
 .portPhoto {
+  /* display: flex; */
+border: 1px solid red;
   width: 100%;
   min-width: 120px;
   margin-top:-120px;
@@ -543,12 +545,19 @@ z-index: 1;
 
 @media screen and (max-width: 1000px) {
   #home {
-    border: 3px solid white;
+    border: 3px solid yellow;
     width: 100%;
     font-size: 0.77em;
     padding-bottom: 30%;
     
   }
+
+  .myPhoto {
+    width: 40%;
+    border-radius: 50%;
+    border: 8px solid rgb(0, 255, 51);
+}
+
   header {
     /* display: none;  */
   }
@@ -599,9 +608,9 @@ z-index: 1;
     /* margin-bottom: 30%; */
   }
   .myPhoto {
-    width: 50%;
+    width: 60%;
     border-radius: 50%;
-    border: 8px solid rgb(255, 255, 0);
+    border: 8px solid rgb(93, 0, 255);
 }
 
 
