--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,8 @@ body {
   width: 100%;
   height: 100%;
   min-width: 500px;
+  /* display: flex; */
+  flex-direction: column;
 }
 header {
   display: flex;
@@ -111,12 +113,13 @@ margin-left: -20px;
   width: 25%;
   border-radius: 50%;
   border: 15px solid rgb(231, 228, 228);
+
 }
 
 .portPhoto {
-  display: flex;
+  /* display: flex; */
   justify-content: center;
-border: 1px solid red;
+/* border: 1px solid red; */
   width: 100%;
   min-width: 120px;
   margin-top:-120px;
@@ -609,9 +612,9 @@ z-index: 1;
     /* margin-bottom: 30%; */
   }
   .myPhoto {
-    width: 60%;
+    width: 50%;
     border-radius: 50%;
-    border: 8px solid rgb(93, 0, 255);
+    border: 8px solid aliceblue;
 }
 
 
@@ -624,7 +627,9 @@ z-index: 1;
     font-size: 0.6em;
     /* padding-bottom: 20%; */
   } 
-
+  .portPhoto {
+    margin-left: 20%;
+  }
   }
 
 
