--- a/src/style.css
+++ b/src/style.css
@@ -135,16 +135,17 @@ margin-left: -20px;
   background: linear-gradient(to bottom right,black, lightblue);
   height: 60vh;
   padding-top: 300px;
-  /* margin-bottom: -200px; */
+  display: flex;
+
 }
 
 .content_title {
   color: rgb(19, 2, 88);
   text-shadow: 0px 0px 15px white;
   font-size: 2.5em;
-  margin: -10px 50px;
+  /* margin: -10px 50px; */
 }
-.content {
+.about_left {
   color: white;
   padding: 20px;
   font-size: 1.2em;
@@ -153,23 +154,23 @@ margin-left: -20px;
   /* border:  1px solid red; */
 }
 
-.content_title2 {
+/* .content_title2 {
   color: rgb(19, 2, 88);
   text-shadow: 0px 0px 15px white;
   margin: 0px 50px;
   font-size: 2em;
   padding: 10px;
-}
+} */
 
 
-.content_end {
+.about_right {
   display: flex;
   padding: 10px;
   flex-direction: column;
   color: white;
 }
 
-.content_end >div {
+.about_right >div {
   padding: 5px 20px;
   font-size: 1.2em;
 }
@@ -548,6 +549,7 @@ z-index: 1;
 }
 
 #about {
+  padding-top: 220px;
 font-size: 0.9em;
 }
 
