--- a/src/style.css
+++ b/src/style.css
@@ -134,8 +134,9 @@ margin-left: -20px;
 .about {
   background: linear-gradient(to bottom right,black, lightblue);
   height: 60vh;
-  padding-top: 300px;
+  padding-top: 17%;
   display: flex;
+  flex-direction: row;
 
 }
 
@@ -147,27 +148,19 @@ margin-left: -20px;
 }
 .about_left {
   color: white;
-  padding: 20px;
-  font-size: 1.2em;
+  padding-left: 8%;
+  font-size: 1.3em;
   line-height: 1.5em;
   text-indent:1.2em;
-  /* border:  1px solid red; */
+  border:  1px solid red;
+  flex: 2;
 }
-
-/* .content_title2 {
-  color: rgb(19, 2, 88);
-  text-shadow: 0px 0px 15px white;
-  margin: 0px 50px;
-  font-size: 2em;
-  padding: 10px;
-} */
-
-
 .about_right {
-  display: flex;
-  padding: 10px;
-  flex-direction: column;
   color: white;
+  padding-left: 10%;
+  font-size: 1.1em;
+  flex-direction: column;
+  flex: 2;
 }
 
 .about_right >div {
@@ -540,18 +533,21 @@ z-index: 1;
 
 
   
-@media screen and (max-width: 1200px) {
-  .portPhoto {
-    /* margin-top:-150px;   */
+@media screen and (max-width: 1300px) {
+  #about {
+    font-size: 0.9em;
   }
-  .myPhoto {
-    border: 8px solid aliceblue(0, 255, 51);
+  
 }
 
-#about {
-  padding-top: 220px;
-font-size: 0.9em;
-}
+@media screen and (max-width: 1200px) {
+  .myPhoto {
+    border: 8px solid aliceblue(0, 255, 51);
+  }
+  
+  #about {
+    padding-bottom: 3%;
+  }
 
 }
   /* #home
@@ -576,12 +572,12 @@ font-size: 0.9em;
     margin-top:-8%;
 }
 
-#about {
-  
-}
+  #about {
+    
+  }
 
   header {
-    /* display: none;  */
+ 
   }
 
 
@@ -610,7 +606,7 @@ font-size: 0.9em;
 
 
 
-/* padding-bottom: 20%; */
+
 #contacts {
   min-height: 100vh;
 }
@@ -623,12 +619,9 @@ font-size: 0.9em;
   #home {
     width: 100%;
     font-size: 0.6em;
-    /* padding-bottom: 30%; */
-    /* margin-bottom: 30%; */
   }
   .myPhoto {
     width: 50%;
-    border-radius: 50%;
     border: 8px solid aliceblue;
     margin-top:-12%;
 }
