--- a/src/style.css
+++ b/src/style.css
@@ -153,6 +153,7 @@ margin-left: -20px;
   text-indent:1.2em;
   border:  1px solid red;
   flex: 2;
+  height: 100vh;
 }
 .about_right {
   color: white;
