--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,7 @@ margin-left: -20px;
   height: 60vh;
   padding-top: 17%;
   display: flex;
-  border: 2 px solid red !important;
+  /* border: 2 px solid red !important; */
 }
 
 .content_title {
@@ -146,7 +146,7 @@ margin-left: -20px;
   /* margin: -10px 50px; */
 }
 .about_left {
-  border:  1px solid red;
+  /* border:  1px solid red; */
   color: white;
   padding-left: 8%;
   font-size: 1.3em;
@@ -629,7 +629,7 @@ z-index: 1;
 }
 
 .about {
-  padding-bottom: 55%;
+  padding-bottom: 85%;
 }
 
   }
