--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,7 @@ margin-left: -20px;
   height: 100vh;
 }
 .about_right {
-  border:  1px solid red;
+  /* border:  1px solid red; */
   color: white;
   padding-left: 8%;
   font-size: 1.2em;
