--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,7 @@ margin-left: -20px;
   height: 60vh;
   padding-top: 17%;
   display: flex;
-  border-bottom: 3px solid aliceblue;
+  border-bottom: 3px solid lightgray;
   /* border: 2 px solid red !important; */
 }
 
@@ -588,25 +588,22 @@ gap: 100px;
     padding-bottom: 50%;
   }
 .content_skills {
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   flex-direction: row;
-  margin-left: 0px !important;
-  margin-right: 0px !important;
+  margin-left: 10% !important;
+  margin-right: 3% !important;
 }
 
 
   .battery_position {
-    justify-content: flex-start;
+    justify-content: center;
     max-width: 350px;
   }
 
-
-  /* .content_skills {
-    margin-left: 0px;
-    margin-right: 0px;
-
-  } */
+.skills_title {
+  padding-top: 50px;
+}
 
  
 
@@ -653,55 +650,17 @@ gap: 100px;
 .skills {
   padding-bottom: 82%;
 }
- {
-    width: 99%;
-    justify-content: flex-start;
-    max-width: 350px;
-}
-<style>
-.battery_position {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    color: white;
-    font-size: 1.4em;
-    /* font-weight: 500; */
-    gap: 30px;
-    position: relative;
-    padding-top: 20px;
-    /* border: 2px solid red; */
-}
-user agent stylesheet
-div {
-    display: block;
-}
-<style>
+.battery_position  
 .content_skills {
-    color: white;
+    border: 2px solid red !important;
     display: flex;
-    justify-content: space-evenly;
-    /* padding: 50px; */
-    /* text-align: center; */
-    margin-top: 20px;
+    flex-direction: column;
+    margin-left: 3% !important;
+    margin-right: 3% !important;  
 }
-<style>
-.skills {
-    height: 100vh;
-    background-image: url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fon-dlya-prezentatsii-programmirovanie-76.jpg);
-    /* color: rgb(19, 2, 88) !important; */
-    text-shadow: 0px 0px 15px white;
-    background-size: cover;
-    background-attachment: fixed;
-    /* background-color: black; */
-    height: 100vh;
-    filter: grayscale(50%);
-}
-.content_skills {
-  border: 2px solid red;
- 
-  
-}
-
+/* .right>h1 {
+  padding-top: 20px;
+} */
 
 }
 
