--- a/src/style.css
+++ b/src/style.css
@@ -314,9 +314,7 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   color: white;
   display: flex;
   justify-content: space-evenly;
-  /* padding: 50px; */
-  /* text-align: center; */
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .content_skills>h1 {
 text-align: center;
@@ -555,11 +553,13 @@ z-index: 1;
   .about {
     padding-bottom: 3%;
   }
-  /* .content_skills {
-    margin-left: 100px !important;
-    margin-right: 0px !important;
-gap: 100px;
-  } */
+
+  .content_skills {
+    display: flex;
+    /* flex-direction: row; */
+    margin-left: 10% !important;
+    margin-right: 3% !important;
+  }
 
 }
   
@@ -583,12 +583,12 @@ gap: 100px;
     font-size: 0.8em;
     padding-bottom: 68%;
   }
-
+  
   .skills {
-    padding-bottom: 50%;
+    padding-bottom: 0%;
+    
   }
 .content_skills {
-  /* border: 2px solid red; */
   display: flex;
   flex-direction: row;
   margin-left: 10% !important;
@@ -602,7 +602,7 @@ gap: 100px;
   }
 
 .skills_title {
-  padding-top: 50px;
+  /* padding-top: 50px; */
 }
 
  
@@ -648,19 +648,15 @@ gap: 100px;
   padding-bottom: 85%;
 }
 .skills {
-  padding-bottom: 82%;
+  padding-bottom: 45%;
 }
-.battery_position  
+/* .battery_position   */
 .content_skills {
-    border: 2px solid red !important;
-    display: flex;
-    flex-direction: column;
-    margin-left: 3% !important;
-    margin-right: 3% !important;  
+  display: flex;
+  flex-direction: column;
+  margin-left: 10% !important;
+  margin-right: 3% !important;
 }
-/* .right>h1 {
-  padding-top: 20px;
-} */
 
 }
 
@@ -690,8 +686,16 @@ gap: 100px;
   .about_right {
     padding-left: 0%;
   }
+  
   .skills {
-    padding-bottom: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 59%;
+    /* padding-bottom: 90%; */
+  }
+  #content_skills {
+    display: flex;
+    flex-direction: column;
   }
   
   
