--- a/src/style.css
+++ b/src/style.css
@@ -205,7 +205,8 @@ url(https://catherineasquithgallery.com/uploads/posts/2021-02/1613680421_58-p-fo
   background-attachment: fixed;
   /* background-color:black; */
   height: 100vh;
-  filter: grayscale(50%)
+  filter: grayscale(50%);
+  border-bottom: 3px solid white;
 }
 
 .inside_flex {
@@ -611,7 +612,6 @@ padding-bottom: 50%;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  border: 1px solid red;
   padding-left: 18%;
  }
 
@@ -625,6 +625,7 @@ padding-bottom: 50%;
   /* border: 2px solid red; */
   margin-top: 50px;
   width: 300px;
+  gap: 100px;
 }
 
 
