--- a/src/style.css
+++ b/src/style.css
@@ -450,6 +450,7 @@ z-index: 1;
   background: linear-gradient(to bottom right,black, lightblue);
   color: rgb(150, 138, 197);
   text-shadow: 0px 0px 5px rgb(175, 219, 219);
+  border-bottom: 3px solid lightgray;
   
 }
 
@@ -618,7 +619,7 @@ padding-bottom: 50%;
 
 
  .projects_content>div {
-  border: 2px solid blue !important;
+  border: 2px solid greenyellow;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
